added rnn and fix cnn - tex

--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -5,6 +5,15 @@
   publisher={PyImageSearch}
 }
 
+@misc{wavenet,
+	author = {Eddy, Joseph},
+	title = {{Time Series Forecasting with Convolutional Neural Networks - a Look at WaveNet}},
+	year = {2019},
+	month = {Feb},
+	note = {[Online; accessed 9. Jan. 2021]},
+	url = {https://jeddy92.github.io/JEddy92.github.io/ts_seq2seq_conv}
+}
+
 @misc{gdanalogy,
   author = {Wikipedia},
   title = {Gradient descent - Wikipedia},
