--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -110,6 +110,7 @@
 	url = {https://colah.github.io/posts/2015-08-Understanding-LSTMs}
 }
 
+
 @article{Saha2020Oct,
 	author = {Saha, Sumit},
 	title = {{A Comprehensive Guide to Convolutional Neural Networks {\ifmmode---\else\textemdash\fi} the ELI5 way}},
@@ -192,4 +193,42 @@
   author = {freeCodeCamp.org}, 
   year = {2018}, 
   month={Jul}
+}
+
+@misc{wavenet2,
+	title = {{WaveNet: A Generative Model for Raw Audio}},
+  author = {Deepmind},
+  month        = {Sep},
+  year         = {2016},
+	note = {[Online; accessed 11. Jan. 2021]},
+	url = {https://deepmind.com/blog/article/wavenet-generative-model-raw-audio}
+}
+
+@article{Bai2020Aug,
+	author = {Bai, Kunlun},
+	title = {{A Comprehensive Introduction to Different Types of Convolutions in Deep Learning}},
+	journal = {Medium},
+	year = {2020},
+	month = {Aug},
+	publisher = {Towards Data Science},
+	url = {https://towardsdatascience.com/a-comprehensive-introduction-to-different-types-of-convolutions-in-deep-learning-669281e58215}
+}
+
+@misc{padding,
+	title = {{6.3. Padding and Stride {\ifmmode---\else\textemdash\fi} Dive into Deep Learning 0.16.0 documentation}},
+	year = {2021},
+	month = {Jan},
+	note = {[Online; accessed 11. Jan. 2021]},
+	url = {https://d2l.ai/chapter_convolutional-neural-networks/padding-and-strides.html}
+}
+
+@article{bn,
+	author = {Peccia, Federico},
+	title = {{Batch normalization: theory and how to use it with Tensorflow}},
+	journal = {Medium},
+	year = {2019},
+	month = {Jan},
+	issn = {1892-0173},
+	publisher = {Towards Data Science},
+	url = {https://towardsdatascience.com/batch-normalization-theory-and-how-to-use-it-with-tensorflow-1892ca0173ad}
 }
