.gitignore is now working

--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -5,6 +5,23 @@
   publisher={PyImageSearch}
 }
 
+@misc{kfolds,
+	title = {{ProClassify User's Guide - Cross-Validation Explained}},
+	year = {2006},
+	month = {Jun},
+	note = {[Online; accessed 1. Feb. 2021]},
+	url = {https://genome.tugraz.at/proclassify/help/pages/XV.html}
+}
+
+@misc{corrmatrix,
+	title = {{2 - How to Calculate a Correlation Matrix - Data Exploration for Machine Learning {$\vert$} Vertica}},
+	journal = {Vertica},
+	year = {2020},
+	month = {Nov},
+	note = {[Online; accessed 4. Feb. 2021]},
+	url = {https://www.vertica.com/blog/in-database-machine-learning-2-calculate-a-correlation-matrix-a-data-exploration-post}
+}
+
 @misc{wavenet,
 	author = {Eddy, Joseph},
 	title = {{Time Series Forecasting with Convolutional Neural Networks - a Look at WaveNet}},
